--- a/get-sentiment/pyproject.toml
+++ b/get-sentiment/pyproject.toml
@@ -1,18 +1,14 @@
 [tool.poetry]
-name = "chatbot"
+name = "app"
 version = "0.1.0"
 description = ""
 authors = ["None"]
-
-[[tool.poetry.packages]]
-include = "py_baml_example"
-from = "."
+include = ["app"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-baml = {version = "^0.6.0.dev6", allow-prereleases = true}
 termcolor = "^2.4.0"
-
+baml = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
