--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 termcolor = "^2.3.0"
-baml = ">=0.6.0"
+baml = "^0.10.0"
 
 
 [build-system]
