--- a/fastapi-starter/pyproject.toml
+++ b/fastapi-starter/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["None"]
 readme = "README.md"
-
 packages = [
     { include = "fast_api_starter", from = "." }
 
@@ -14,7 +13,7 @@ packages = [
 python = "^3.11"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
-baml = ">=0.17.0"
+baml = "0.17.1"
 
 
 [build-system]
