--- a/fastapi-starter/pyproject.toml
+++ b/fastapi-starter/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 python = "^3.11"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
-baml = "0.17.1"
+baml = "^0.19.0"
 
 
 [build-system]
