--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -10,7 +10,7 @@
     "baml-test": "jest"
   },
   "dependencies": {
-    "@boundaryml/baml-core": "^0.0.7",
+    "@boundaryml/baml": "0.0.8",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18"
