--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "copy-webpack-plugin": "^12.0.2",
     "dotenv-cli": "^7.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
