--- a/fastapi-starter/pyproject.toml
+++ b/fastapi-starter/pyproject.toml
@@ -12,9 +12,7 @@ packages = [
 python = "^3.11"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
-
-[tool.poetry.group.dev.dependencies]
-maturin = { version = "^1.5.1" }
+baml-py = "^0.32.1"
 
 
 [build-system]
