--- a/fastapi-starter/pyproject.toml
+++ b/fastapi-starter/pyproject.toml
@@ -6,14 +6,13 @@ authors = ["None"]
 readme = "README.md"
 packages = [
     { include = "fast_api_starter", from = "." }
-
 ]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
-baml = "^0.19.0"
+baml-py = "^0.32.1"
 
 
 [build-system]
