--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -3,17 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "BAML_LOG=baml_events next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "baml-test": "jest"
+    "generate": "baml-cli generate --from ./baml_src"
   },
   "dependencies": {
-    "@boundaryml/baml-core": "^0.0.7",
+    "@boundaryml/baml": "^0.0.27",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-slot": "^1.0.2",
+    "ai": "^3.1.21",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.381.0",
     "next": "14.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spinners": "^0.13.8",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -21,6 +30,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "copy-webpack-plugin": "^12.0.2",
     "dotenv-cli": "^7.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
