--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -10,9 +10,17 @@
     "generate": "baml-cli generate --from ./baml_src"
   },
   "dependencies": {
-    "@boundaryml/baml": "^0.32.0",
+    "@boundaryml/baml": "^0.34.0",
+    "@headlessui/react": "^2.0.4",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@react-hook/debounce": "^4.0.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tremor/react": "^3.17.2",
     "ai": "^3.1.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
