--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.381.0",
     "next": "14.1.2",
+    "openai": "^4.49.0",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
