--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -10,7 +10,7 @@
     "generate": "baml-cli generate --from ./baml_src"
   },
   "dependencies": {
-    "@boundaryml/baml": "^0.37.0",
+    "@boundaryml/baml": "^0.39.0",
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -25,10 +25,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.381.0",
-    "next": "15.0.0-rc.0",
+    "next": "^14.2.3",
     "openai": "^4.49.0",
-    "react": "19.0.0-rc-6230622a1a-20240610",
-    "react-dom": "19.0.0-rc-6230622a1a-20240610",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
@@ -42,7 +42,6 @@
     "copy-webpack-plugin": "^12.0.2",
     "dotenv-cli": "^7.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0",
     "jest": "^29.7.0",
     "nextjs-node-loader": "^1.1.5-alpha.0",
     "postcss": "^8",
