--- a/nextjs-pdf-ocr/package.json
+++ b/nextjs-pdf-ocr/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@boundaryml/baml": "^0.53.0",
+    "@boundaryml/baml-lezer": "^0.1.1",
+    "@codemirror/language": "^6.10.2",
+    "@codemirror/lint": "^6.8.1",
+    "@gloo-ai/baml-schema-wasm-web": "^0.1.0",
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/resolvers": "^3.9.0",
@@ -23,16 +27,23 @@
     "@react-hook/debounce": "^4.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tremor/react": "^3.17.2",
-    "ai": "^3.1.31",
+    "@uiw/react-codemirror": "^4.23.0",
+    "ai": "^3.3.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jotai": "^2.9.3",
     "lucide-react": "^0.381.0",
-    "next": "^14.2.3",
+    "next": "^14.2.5",
     "openai": "^4.49.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
+    "react-pdf": "^9.1.0",
+    "react-spinners": "^0.13.8",
+    "react18-json-view": "^0.2.8",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
