--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -10,7 +10,7 @@
     "generate": "baml-cli generate --from ./baml_src"
   },
   "dependencies": {
-    "@boundaryml/baml": "^0.53.0",
+    "@boundaryml/baml": "^0.54.0",
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/resolvers": "^3.9.0",
@@ -31,6 +31,7 @@
     "openai": "^4.49.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
