--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -31,6 +31,7 @@
     "openai": "^4.49.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
