--- a/rust-openapi-starter/Cargo.toml
+++ b/rust-openapi-starter/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1"
 baml-client = { path = "./baml_client" }
 tokio = { version = "1.40.0", features = ["full"] }
