--- a/python-fastapi-starter/pyproject.toml
+++ b/python-fastapi-starter/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.11"
 fastapi = "^0.115.0"
 uvicorn = {extras = ["standard"], version = "^0.31.0"}
 baml-py = "^0.59.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
