--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -3,40 +3,56 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "BAML_LOG=info next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "generate": "baml-cli generate --from ./baml_src"
   },
   "dependencies": {
-    "@boundaryml/baml": "^0.57.0",
+    "@boundaryml/baml": "0.64.0",
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@react-hook/debounce": "^4.0.0",
-    "@tailwindcss/forms": "^0.5.7",
+    "@remixicon/react": "^4.4.0",
     "@tremor/react": "^3.17.2",
     "ai": "^3.1.31",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cx": "^24.10.10",
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.381.0",
-    "next": "^14.2.3",
+    "next": "^15.0.1",
+    "next-themes": "^0.3.0",
     "openai": "^4.49.0",
     "react": "^18.3.1",
+    "react-charts": "3.0.0-beta.57",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.1",
     "react-spinners": "^0.14.1",
+    "react18-json-view": "^0.2.8",
+    "recharts": "^2.13.0",
     "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
