Get it running locally

--- a/fridaybot/pyproject.toml
+++ b/fridaybot/pyproject.toml
@@ -11,12 +11,14 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.12"
 requests = "^2.32.3"
-baml-py = "^0.66.0"
+baml-py = "^0.70.0"
 discord = "^2.3.2"
 python-dotenv = "^1.0.1"
 pydantic = "^2.9.2"
 notion-client = "^2.2.1"
 
+[tool.poetry.scripts]
+fridaybot = "fridaybot.app:main"
 
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.32.0.20241016"
