--- a/.github/workflows/friday-bot.yml
+++ b/.github/workflows/friday-bot.yml
@@ -40,14 +40,12 @@ jobs:
           cp .env.example .env
         working-directory: ${{ github.workspace }}/fridaybot
 
-      - name: Set environment variables
+      - name: Run Fridaybot
         run: |
+
           DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-
-      - name: Run bot
-        run: |
 
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             START_DATE="${{ inputs.start_date }}"
