--- a/.github/workflows/friday-bot.yml
+++ b/.github/workflows/friday-bot.yml
@@ -62,13 +62,13 @@ jobs:
             fi
 
             if [ -n "$END_DATE" ]; then
-              poetry run python -m fridaybot.app --after=$START_DATE --before=$END_DATE
+              poetry run python fridaybot --after=$START_DATE --before=$END_DATE
             else
-              poetry run python -m fridaybot.app --after=$START_DATE
+              poetry run python fridaybot --after=$START_DATE
             fi
           else
             # For scheduled runs, use the last 14 days.
             START_DATE=$(date -d "14 days ago" +%Y-%m-%d)
-            poetry run fridaybot.app --after=$START_DATE
+            poetry run fridaybot --after=$START_DATE
           fi
         working-directory: ${{ github.workspace }}/fridaybot
