Add sveltekit starter

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ poetry/core/*
 # Ignoring this to keep this repo clean, but don't add this line for your own baml
 # project or your code won't be able to import the baml_client package
 baml_client/
+
+node_modules/
