--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -1,73 +1,73 @@
 {
-  "name": "baml_nextjs_starter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "generate": "baml-cli generate --from ./baml_src"
-  },
-  "dependencies": {
-    "@boundaryml/baml": "link:../../baml/engine/language_client_typescript",
-    "@boundaryml/baml-nextjs-plugin": "link:../../baml/typescript/nextjs-plugin",
-    "@headlessui/react": "^2.0.4",
-    "@headlessui/tailwindcss": "^0.2.1",
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@react-hook/debounce": "^4.0.0",
-    "@remixicon/react": "^4.4.0",
-    "@tremor/react": "^3.17.2",
-    "ai": "^4.0.28",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cx": "^24.10.10",
-    "framer-motion": "^11.11.10",
-    "lucide-react": "^0.381.0",
-    "next": "^15.0.1",
-    "next-themes": "^0.3.0",
-    "openai": "^4.49.0",
-    "react": "^18.3.1",
-    "react-charts": "3.0.0-beta.57",
-    "react-colorful": "^5.6.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1",
-    "react-spinners": "^0.14.1",
-    "react18-json-view": "^0.2.8",
-    "recharts": "^2.13.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "copy-webpack-plugin": "^12.0.2",
-    "dotenv-cli": "^7.4.1",
-    "eslint": "^8",
-    "jest": "^29.7.0",
-    "nextjs-node-loader": "^1.1.5-alpha.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
-  }
+	"name": "baml_nextjs_starter",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"generate": "baml-cli generate --from ./baml_src"
+	},
+	"dependencies": {
+		"@boundaryml/baml": "0.74.0",
+		"@boundaryml/baml-nextjs-plugin": "0.1.0",
+		"@headlessui/react": "^2.0.4",
+		"@headlessui/tailwindcss": "^0.2.1",
+		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-accordion": "^1.2.1",
+		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-hover-card": "^1.1.2",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-scroll-area": "^1.2.0",
+		"@radix-ui/react-select": "^2.1.2",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slider": "^1.2.1",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"@radix-ui/react-tooltip": "^1.1.3",
+		"@react-hook/debounce": "^4.0.0",
+		"@remixicon/react": "^4.4.0",
+		"@tremor/react": "^3.17.2",
+		"ai": "^4.0.28",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"cx": "^24.10.10",
+		"framer-motion": "^11.11.10",
+		"lucide-react": "^0.381.0",
+		"next": "^15.0.1",
+		"next-themes": "^0.3.0",
+		"openai": "^4.49.0",
+		"react": "^18.3.1",
+		"react-charts": "3.0.0-beta.57",
+		"react-colorful": "^5.6.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.1",
+		"react-spinners": "^0.14.1",
+		"react18-json-view": "^0.2.8",
+		"recharts": "^2.13.0",
+		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.7",
+		"@types/jest": "^29.5.12",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"copy-webpack-plugin": "^12.0.2",
+		"dotenv-cli": "^7.4.1",
+		"eslint": "^8",
+		"jest": "^29.7.0",
+		"nextjs-node-loader": "^1.1.5-alpha.0",
+		"postcss": "^8",
+		"tailwindcss": "^3.3.0",
+		"ts-jest": "^29.1.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5"
+	}
 }
