--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -2,6 +2,7 @@
 	"name": "baml_nextjs_starter",
 	"version": "0.1.0",
 	"private": true,
+	"packageManager": "pnpm@9.12.0",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
