--- a/extract-anything/backend/pyproject.toml
+++ b/extract-anything/backend/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "baml-py==0.78.0",
     "fastapi[standard]>=0.115.11",
     "httpx>=0.28.1",
+    "pdf2image>=1.17.0",
+    "pydantic>=2.10.6",
     "python-multipart>=0.0.20",
     "uvicorn>=0.34.0",
 ]
