--- a/todo-llm-db/Dockerfile
+++ b/todo-llm-db/Dockerfile
@@ -1,32 +1,40 @@
 # Install dependencies only when needed
-FROM node:16-alpine AS builder
+FROM node:20-bookworm AS builder
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+
+# RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY . .
-RUN yarn install --frozen-lockfile
+RUN npm ci
+RUN npm install @boundaryml/baml@0.86 @boundaryml/baml-nextjs-plugin
+RUN npm install lightningcss
+RUN npm install tailwindcss
+RUN npm install @tailwindcss/oxide-linux-x64-gnu
+RUN npm install @next/font
+RUN pwd
+RUN ls node_modules/@boundaryml
+RUN ls node_modules/@boundaryml/baml
+# RUN ls node_modules/@boundaryml/baml-linux-x64-musl
+RUN npx baml-cli generate
 
-# If using npm with a `package-lock.json` comment out above and use below instead
-# RUN npm ci
-
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED=1
 
 # Add `ARG` instructions below if you need `NEXT_PUBLIC_` variables
 # then put the value on your fly.toml
 # Example:
 # ARG NEXT_PUBLIC_EXAMPLE="value here"
 
-RUN yarn build
+RUN npm run build
 
 # If using npm comment out above and use below instead
 # RUN npm run build
 
 # Production image, copy all the files and run next
-FROM node:16-alpine AS runner
+FROM node:20-bookworm AS runner
 WORKDIR /app
 
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
@@ -35,7 +43,8 @@ COPY --from=builder /app ./
 
 USER nextjs
 
-CMD ["yarn", "start"]
+ENV PORT=8080
+CMD ["npm", "run", "start"]
 
 # If using npm comment out above and use below instead
 # CMD ["npm", "run", "start"]
