--- a/todo-llm-db/package.json
+++ b/todo-llm-db/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:db": "node -r dotenv/config src/components/tests/database.test.js"
   },
   "dependencies": {
-    "@boundaryml/baml": "^0.86",
+    "@boundaryml/baml": "^0.86.1",
     "@boundaryml/baml-nextjs-plugin": "^0.1.0",
+    "@libsql/client": "^0.15.4",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
@@ -19,16 +21,19 @@
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.5",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
     "jotai": "^2.12.3",
+    "lightningcss": "^1.29.3",
     "lucide-react": "^0.503.0",
     "motion": "12.9.2",
-    "date-fns": "4.1.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "openai": "^4.97.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
@@ -42,7 +47,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
