--- a/python-chatbot/server/pyproject.toml
+++ b/python-chatbot/server/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
 dependencies = [
+    "baml-py>=0.87.2",
     "fastapi>=0.115.12",
     "pydantic>=2.11.4",
     "python-dotenv>=1.1.0",
