--- a/python-chatbot/server/pyproject.toml
+++ b/python-chatbot/server/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "fastapi>=0.115.12",
     "pydantic>=2.11.4",
     "python-dotenv>=1.1.0",
+    "requests>=2.32.3",
     "uvicorn>=0.34.2",
 ]
