--- a/nextjs-starter/package.json
+++ b/nextjs-starter/package.json
@@ -10,12 +10,13 @@
     "generate": "baml-cli generate --from ./baml_src"
   },
   "dependencies": {
-    "@boundaryml/baml": "^0.81.3",
+    "@boundaryml/baml": "^0.88.0",
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
@@ -35,6 +36,7 @@
     "clsx": "^2.1.1",
     "cx": "^24.10.10",
     "framer-motion": "^11.11.10",
+    "jotai": "^2.12.4",
     "lucide-react": "^0.381.0",
     "next": "^15.0.1",
     "next-themes": "^0.3.0",
@@ -59,9 +61,11 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "copy-webpack-plugin": "^12.0.2",
+    "date-fns": "^4.1.0",
     "dotenv-cli": "^7.4.1",
     "eslint": "^8",
     "jest": "^29.7.0",
+    "motion": "^12.12.1",
     "nextjs-node-loader": "^1.1.5-alpha.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
