--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,6 @@
       "editor.defaultFormatter": "biomejs.biome"
     },
     "[json]": {
-      "editor.defaultFormatter": "biomejs.biome"
+      "editor.defaultFormatter": "vscode.json-language-features"
     }
   }
