--- a/python-chatbot/package.json
+++ b/python-chatbot/package.json
@@ -3,17 +3,16 @@
     "setup:server": "cd server && uv add baml-py",
     "setup:frontend": "pnpm --filter frontend install",
     "setup": "pnpm run setup:server && pnpm run setup:frontend",
-    
     "start:server": "cd server && uv run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000",
-    "start:frontend": "pnpm --filter frontend dev",
-    
+    "start:frontend": "cd frontend && npm run dev",
     "dev": "concurrently \"pnpm run start:server\" \"pnpm run start:frontend\"",
-    
     "build:baml": "cd server && uv run baml-cli generate",
     "build:frontend": "pnpm --filter frontend build",
     "postbuild:frontend": "mkdir -p server/app/static && cp -r frontend/out/* server/app/static/",
     "build": "pnpm run build:baml && pnpm run build:frontend && pnpm run postbuild:frontend",
-    
     "start:prod": "cd server && uv run uvicorn app.main:app --host 0.0.0.0 --port 8000"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
